[options]
setup_requires =
    wheel>0.34.2
    setuptools>=44.1.0
install_requires =
    requests>=2.24.0
    pillow>=8.0.1
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    appy = appy.__main__:main

[metadata]
name = unfor19-appy
description = Python project template
license = MIT
long_description_content_type = text/markdown
long_description = file: README.md
keywords =
    python
    project
    template
url = https://github.com/unfor19/python-project
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows    
author = Meir Gabay
author_email = unfor19@gmail.com
